  * The lattice siever no longer opens ggnfs.log in binary mode, so those
    output lines should now be correctly terminated under Windows.
  * Removed bigint library specification as GMP from factLat.pl.  Apparently
    the GMP BigInt library is not available to Perl on some systems.
  * Modified factLat.pl to print q0 values to ggnfs.log at beginning of
    lattice sieve runs.

8/29/05 (Brian Gladman)
  * added matbuild-tpie to the VC7 and VC8 build projects (could not do
    this for VC6 as I no longer use this version)

8/29/05 (Brian Gladman)
  * change to VC6, VC7 and VC8 build organisation to provide individual
    build directories (to avoid object file version conflicts)
  * copied Intel syntax assembler files from VC++ build directory
    to src\lasieve4\piii and src\pol5 so they are alongside their
    AT&T equivalents

8/27/05 (Brian Gladman)
  * change to VC6 and VC7 project files to make move to VC8 easier

8/26/05 (Brian Gladman)
  * minor update to correct an error in the VC++ project build files

8/24/05 (trilliwig)
  * Added LOCALINC to include paths in Makefiles for src/lasieve4/piii,
    src/lasieve4/ppc32, and src/pol5.  Anyone able to try if the itanium
    or mips lattice siever code works? :)
  * Added Makefile to tests/snfs_small
  * Eliminated _MSC_VER define when compiling under MinGW
  * Added copy of pol51-intel executables to a name without the suffix, so
    the factLat.pl script can still find them.  It really should be a
    symlink, but under MinGW, "ln -s" is a synonym for cp, and cp does not
    treat relative pathnames in the same way that ln does.
  * Fixed makesymlinks.sh

8/24/05 (relf)
  * lasieve-asm.h renamed to siever-config.h
  * 'ppc32' now linked to 'asm' (very much like 'piii')
  * Makefile's unified: no Makefile[.x86|.ppc|whatever] anymore
  * underscore problem fixed, ASM_UL removed
  * pol5/Makefile became $HOST-driven; "-intel" suffix removed from binaries

8/23/05 (Brian Gladman)